Next rework after 2nd batch of suggestions
